--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "mk-j/php_xlsxwriter",
+    "name": "horstmue/php_xlsxwriter",
     "description": "PHP Library to write XLSX files",
     "keywords": ["php", "library","xls", "xlsx", "excel"],
     "type": "library",
-    "homepage": "https://github.com/mk-j/PHP_XLSXWriter",
+    "homepage": "https://github.com/horstmue/PHP_XLSXWriter",
     "license": "MIT",
 
     "autoload": {
